WINDUP-2171 Enhanced Windows script